deploy/us-031-sla/objects/Lead_SLA_Config__mdt.object
<!--
  US-031 - CMT de SLA de Lead (Sec 37.2.2: SLA por Sociedade+Linea+Canal).
  Nada hardcoded: o flow le o SLA (minutos), o teto de reatribuicoes e a fila de
  escalada DESTE CMT. Chave de match: Channel (obrigatorio) + Sociedad/Línea (opcionais
  p/ override). Linha com Sociedad/Línea em branco = default que vale pra todos.
-->
<CustomObject>
    <label>Lead SLA Config</label>
    <pluralLabel>Lead SLA Config</pluralLabel>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sociedad__c</fullName>
        <label>Sociedad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessLine__c</fullName>
        <label>Business Line</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAMinutes__c</fullName>
        <label>SLA Minutes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxReassignments__c</fullName>
        <label>Max Reassignments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EscalationQueueDevName__c</fullName>
        <label>Escalation Queue Dev Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>